tests/sema/fail/v3_fail_nonvoid_bare_return.ep
# COMPILE_FAIL_CONTAINS: return expected i64, got void

fun run(): i64 {
    ret
}

fun main(): void {
    exit(run())
}
